--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.22",
+    "jspdf": "^4.2.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
